
syntax = "proto3";

package avikom.unity;

import "avikom/options/options.proto";

option csharp_namespace = "Avikom.Types.Unity";
option go_package = "gitlab.ub.uni-bielefeld.de/avikom/go-types/avikom/unity";
option java_package = "app.avikom.types.unity";


/**
 * A message header to send Unity asset bundles in chunks.
 * Should be available in every initial message to an asset bunde receiver.
 * @author: Alexander Neumann <alneuman@techfak.uni-bielefeld.de>
 */
message AssetBundleInfo {
  int32 size = 1;          /// size of the whole bundle in bytes
  int32 chunk_size = 2;    /// the planed size of each data chunk
  string bundle_name = 3;  /// globally unique name of the asset bundle in question
  string version = 4;      /// version of the bundle to determine whether sending binary data is required or not
}
